fix: configurations can now be updated at runtime
Added ConfigurationServiceBuildItem to be able to retrieve the
QuarkusConfigurationService supplier in the runtime step.